fixes for content gap

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -270,7 +270,7 @@
 	line-height: 1.3;
 }
 .entry-content p {
-	margin-block: 0 1em;
+	margin-block: 0 var(--wp--style--block-gap, 1em);
 }
 .entry-content ul,
 .entry-content ol {
